<?xml version="1.0"?>
<package format="2">
  <name>onrobot_gripper</name>
  <version>0.0.0</version>
  <description>The onrobot_gripper package</description>
  
  <maintainer email="davideferr@unimore.it">Davide Ferrari</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>ur_msgs</depend>
  
</package>
